--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <h3 class="section-title">Наши преимущества</h3>
           <div class="advantage-box">
             <div class="advantage-box__image">
-              <img src="./build/img/adv-img.jpg" class="img-responsive img-thumbnail" alt="image">
+              <img data-src="./build/img/adv-img.jpg" class="img-responsive img-thumbnail" alt="image">
             </div>
             <div class="advantage-box__text">
               Очень долго подбирали разные варианты для того, чтобы отпраздновать свой юбилейный День рождения в
@@ -150,13 +150,13 @@
       <div class="footer-content">
         <div class="footer-content__item">
           <div class="logo">
-            <img src="./build/img/logo-footer.png" alt="logo">
+            <img data-src="./build/img/logo-footer.png" alt="logo">
           </div>
           <div class="desc">Кураж тур агенство,которое предоставляет услуги по поиску, оформлению и подбору туров для
             вас и ваших родных.</div>
           <div class="brand-dev">
             <span>Создание сайта &mdash; </span>
-            <img src="./build/img/logo-dev.png" alt="logo webakula">
+            <img data-src="./build/img/logo-dev.png"  alt="logo webakula">
           </div>
         </div>
 
@@ -186,8 +186,8 @@
             <address>г. Харьков, ул. Лермонтовская 10а</address>
             <div class="tel"><a href="tel:+380999908100">+38 (099) 990-81-00</a></div>
             <div class="social">
-              <a href="#"><img src="./build/img/facebook-icon.png" alt="facebook"></a>
-              <a href="#"><img src="./build/img/instagramm-icon.png" alt="instagramm"></a>
+              <a href="#"><img data-src="./build/img/facebook-icon.png" alt="facebook"></a>
+              <a href="#"><img data-src="./build/img/instagramm-icon.png" alt="instagramm"></a>
             </div>
           </div>
         </div>
@@ -203,6 +203,6 @@
   <script src="./libs/slick.min.js"></script>
   <script src="./libs/jquery.nice-select.min.js"></script>
   <script src="./libs/jquery.validate.min.js"></script>
+  <script src="./build/js/lazy.js"></script>
 </body>
-
 </html>
